2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Add constant function.
	* include/Makefile.am: Distribute new headers.
	* include/roboptim/core/constant-function.hh: New.
	* src/Makefile.am: Compile constant function.
	* src/constant-function.cc: New.
	* tests/Makefile.am: Add constant function test.
	* tests/constant-function.cc: New.
	* tests/constant-function.stdout: New.
	* tests/problem-cc.cc: Use constant function.
	* tests/testsuite.at: Run test suite.

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Generalize constraint storage.
	* include/roboptim/core/plugin/dummy.hh: Use new syntax
	to specify constraints types.
	* include/roboptim/core/problem.hh,
	* include/roboptim/core/problem.hxx: Generalize constraint storage.
	* tests/plugin.cc,
	* tests/problem-cc.cc,
	* tests/simple.cc: Use new syntax to specify constraints
	types.

2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix distribution.
	* include/Makefile.am: Distribute identity-function.hh.
	* tests/Makefile.am: Remove freeze.stdout and
	add identity-function.stdout.

2009-06-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement identity function.
	* include/roboptim/core/identity-function.hh: New.
	* src/Makefile.am: Add new source.
	* src/identity-function.cc: New.
	* tests/Makefile.am: Compile new test.
	* tests/identity-function.cc: New.
	* tests/identity-function.stdout: New.
	* tests/testsuite.at: Run new test case.

2009-06-12  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove Freeze function.
	* include/Makefile.am: Remove freeze.hh from list.
	* include/roboptim/core/freeze.hh: Remove.
	* src/Makefile.am: Remove freeze.cc from list.
	* src/freeze.cc: Remove.
	* tests/Makefile.am: Remove test.
	* tests/freeze.cc: Remove.
	* tests/freeze.stdout: Remove.
	* tests/testsuite.at: Remove test.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* doc/sf-upload.sh.in: Here.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.